Add grunt-contrib-jade to package.json

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "homepage": "https://github.com/guilhermervcoelho/panelando",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-jade": "^0.13.0",
     "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "jade": "^1.7.0"
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
